workload/observability/templates/grafana-virtualservice.yaml
---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: grafana
spec:
  hosts:
    - grafana.linhng98.com
  gateways:
    - istio-system/istio-ingressgateway
  http:
    - route:
        - destination:
            host: observability-grafana.observability.svc.cluster.local
            port:
              number: 80
